Initial Java Spring Boot Project Check-In
POM includes basic Spring Boot Starter for API
POM includes Swagger Code Gen plugin to buid from yaml API definition
Basic Spring Boot App class
Simple Controller Class implementing StatApi interface
