# src/main/resources/swagger-api.yaml
@@ -33,7 +33,7 @@ paths:
       - "outage"
       summary: "Process a new request to report outage from a customer"
       description: ""
-      operationId: "outReq"
+      operationId: "outRequest"
       consumes:
       - "application/json"
       - "application/xml"
@@ -61,9 +61,9 @@ paths:
       - "outage"
       summary: "Process a new request for outage status from a customer"
       description: ""
-      operationId: "statReq"
-      consumes:
-      - "application/json"
+      operationId: "statusRequest"
+#      consumes:
+#      - "application/json"
       produces:
       - "application/json"
       parameters:
@@ -78,9 +78,9 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/OutageStatus"
-      security:
-      - alerts_auth:
-        - "read:alerts"
+#      security:
+#      - alerts_auth:
+#        - "read:alerts"
 
   /alerts/response:
     post:
@@ -88,7 +88,7 @@ paths:
       - "alerts"
       summary: "Add a new response from a customer"
       description: ""
-      operationId: "addResp"
+      operationId: "addAlertResponse"
       consumes:
       - "application/json"
       produces:
@@ -100,6 +100,40 @@ paths:
         required: true
         schema:
           $ref: "#/definitions/AlertCustResponse"
+      responses:
+        405:
+          description: "Invalid input"
+      security:
+      - alerts_auth:
+        - "write:alerts"
+    get:
+      tags:
+      - "alerts"
+      summary: "Add a new response from a customer"
+      description: ""
+      operationId: "addAlertResponse"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "query"
+        name: "source"
+        description: "Origination of request PPO Alert or Restoration Check email"
+        required: true
+        type: string
+        enum: ["PPO","RESTORE"]
+      - in: "query"
+        name: "uuid"
+        required: true
+        type: string
+      - in: "query"
+        name: "status"
+        description: "Power Status"
+        required: true
+        type: "integer"
+        format: "int32"
+        enum: [1,2,3]
+        example: 2
+
       responses:
         405:
           description: "Invalid input"
